--- a/BotaoVerMais/HTML/index.html
+++ b/BotaoVerMais/HTML/index.html
@@ -2,11 +2,11 @@
 <html lang="pt-bt">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="C:\TESTES\BotãoVerMais\CSS\styles.css">
+    <link rel="stylesheet" href="C:\TESTES\Testes\BotaoVerMais\CSS\styles.css">
     <title>Testes</title>
 </head>
 <body>
-    <script src="C:\TESTES\BotãoVerMais\JS\commands.js"></script>
+    <script src="C:\TESTES\Testes\BotaoVerMais\JS\commands.js"></script>
     <div id="txt-style">
         <div id="txt-btn"><h1>Lorem ipsum dolor sit amet, 
             consectetur adipiscing elit. Etiam ege<span id="dots">...</span><span id="more"> ligula eu lectus 
