Adicionado barra de navegacao

--- a/HeaderLinks/index.html
+++ b/HeaderLinks/index.html
@@ -26,6 +26,22 @@
     <div class="container-header">
         <a><img class="logo-img" src="C:\TESTES\Testes\fotos\logo.png"> </a>
         <div class="logo-bubble"><p class="logo-name">Sistemas-WEB</p></div>
+    </div>
+    <div>
+        <nav class="nav-back">
+            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\index.html">
+                <p1 class="nav-txt"> Home</p1>
+            </a>
+            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\index.html">
+                <p1 class="nav-txt"> Produtos</p1>
+            </a>
+            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\index.html">
+                <p1 class="nav-txt"> Sobre nós</p1>
+            </a>
+            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\index.html">
+                <p1 class="nav-txt"> Contato</p1>
+            </a>
+        </nav>
     </div>  
 </body>
 </html>
