--- a/HeaderLinks/html/produtos.html
+++ b/HeaderLinks/html/produtos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="C:\TESTES\Testes\HeaderLinks\css\style.css">
-    <title>Ipsum</title>
+    <title>Produto</title>
 </head>
 <body>
     <script src="C:\TESTES\Testes\HeaderLinks\javascript\commands.js"></script>
