--- a/HeaderLinks/html/sobrenos.html
+++ b/HeaderLinks/html/sobrenos.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="C:\TESTES\Testes\HeaderLinks\css\style.css">
-    <title>Ipsum</title>
+    <title>Sobre nós</title>
 </head>
 <body>
-    <script src="C:\TESTES\Testes\HeaderLinks\javascript\commands.js"></script>
+    <script src="C:\TESTES\Testes\Ipsum\commands.js"></script>
     <div class="container-top">
         <div class="header-left">
             <a class="fa fa-insta" href="https://www.instagram.com" target="_blank"> 
@@ -32,13 +32,13 @@
             <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\index.html">
                 <p1 class="nav-txt"> Home</p1>
             </a>
-            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\html\produtos.html">
+            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\index.html">
                 <p1 class="nav-txt"> Produtos</p1>
             </a>
-            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\html\sobrenos.html">
+            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\html\sobrenos.html" target="_blank">
                 <p1 class="nav-txt"> Sobre nós</p1>
             </a>
-            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\html\contato.html">
+            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\index.html">
                 <p1 class="nav-txt"> Contato</p1>
             </a>
         </nav>
