--- a/HeaderLinks/index.html
+++ b/HeaderLinks/index.html
@@ -42,6 +42,15 @@
                 <p1 class="nav-txt"> Contato</p1>
             </a>
         </nav>
+    </div>
+    <div class="container-middle">
+        <div class="ad-space-left"></div>
+        <div class="container-content"></div>
+        <div class="ad-space-right"></div>
+        
+    </div>
+    <div class="container-bottom">
+
     </div>  
 </body>
 </html>
