--- a/HeaderLinks/html/sobrenos.html
+++ b/HeaderLinks/html/sobrenos.html
@@ -32,13 +32,13 @@
             <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\index.html">
                 <p1 class="nav-txt"> Home</p1>
             </a>
-            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\index.html">
+            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\html\produtos.html">
                 <p1 class="nav-txt"> Produtos</p1>
             </a>
             <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\html\sobrenos.html" target="_blank">
                 <p1 class="nav-txt"> Sobre nós</p1>
             </a>
-            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\index.html">
+            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\html\contato.html">
                 <p1 class="nav-txt"> Contato</p1>
             </a>
         </nav>
