--- a/HeaderLinks/html/contato.html
+++ b/HeaderLinks/html/contato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="C:\TESTES\Testes\HeaderLinks\css\style.css">
-    <title>Contato</title>
+    <title>Ipsum</title>
 </head>
 <body>
     <script src="C:\TESTES\Testes\HeaderLinks\javascript\commands.js"></script>
@@ -24,8 +24,10 @@
         </div>
     </div>
     <div class="container-header">
-        <a><img class="logo-img" src="C:\TESTES\Testes\fotos\logo.png"> </a>
-        <div class="logo-bubble"><p class="logo-name">Sistemas-WEB</p></div>
+        <div class="logo">
+            <img class="logo-img" src="C:\TESTES\Testes\fotos\logo.png">
+            <div class="logo-bubble"><p1 class="logo-txt">Sistemas-WEB</p1></div>
+        </div>
     </div>
     <div>
         <nav class="nav-back">
@@ -42,6 +44,18 @@
                 <p1 class="nav-txt"> Contato</p1>
             </a>
         </nav>
+    </div>
+    <div class="container-middle">
+        <div class="ad-space-left bb"></div>
+        <div class="container-content bb">
+            <div class="title-content">Fale conosco!</div>
+            <div class="content-body-">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing.</div>
+
+        </div>
+        <div class="ad-space-right bb"></div>        
+
+    </div>
+    <div class="btb container-bottom">
     </div>  
 </body>
 </html>
