--- a/HeaderLinks/html/produtos.html
+++ b/HeaderLinks/html/produtos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="C:\TESTES\Testes\HeaderLinks\css\style.css">
-    <title>Produto</title>
+    <title>Ipsum</title>
 </head>
 <body>
     <script src="C:\TESTES\Testes\HeaderLinks\javascript\commands.js"></script>
@@ -24,8 +24,11 @@
         </div>
     </div>
     <div class="container-header">
-        <a><img class="logo-img" src="C:\TESTES\Testes\fotos\logo.png"> </a>
-        <div class="logo-bubble"><p class="logo-name">Sistemas-WEB</p></div>
+        <div class="logo">
+            <img class="logo-img" src="C:\TESTES\Testes\fotos\logo.png">
+            <div class="logo-bubble"><p1 class="logo-txt">Sistemas-WEB</p1></div>
+        </div>
+
     </div>
     <div>
         <nav class="nav-back">
@@ -42,6 +45,10 @@
                 <p1 class="nav-txt"> Contato</p1>
             </a>
         </nav>
+    </div>
+  
+    <div class="btb container-bottom">
+
     </div>  
 </body>
 </html>
