--- a/HeaderLinks/html/sobrenos.html
+++ b/HeaderLinks/html/sobrenos.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="C:\TESTES\Testes\HeaderLinks\css\style.css">
-    <title>Sobre nós</title>
+    <title>Ipsum</title>
 </head>
 <body>
-    <script src="C:\TESTES\Testes\Ipsum\commands.js"></script>
+    <script src="C:\TESTES\Testes\HeaderLinks\javascript\commands.js"></script>
     <div class="container-top">
         <div class="header-left">
             <a class="fa fa-insta" href="https://www.instagram.com" target="_blank"> 
@@ -24,8 +24,11 @@
         </div>
     </div>
     <div class="container-header">
-        <a><img class="logo-img" src="C:\TESTES\Testes\fotos\logo.png"> </a>
-        <div class="logo-bubble"><p class="logo-name">Sistemas-WEB</p></div>
+        <div class="logo">
+            <img class="logo-img" src="C:\TESTES\Testes\fotos\logo.png">
+            <div class="logo-bubble"><p1 class="logo-txt">Sistemas-WEB</p1></div>
+        </div>
+
     </div>
     <div>
         <nav class="nav-back">
@@ -35,13 +38,17 @@
             <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\html\produtos.html">
                 <p1 class="nav-txt"> Produtos</p1>
             </a>
-            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\html\sobrenos.html" target="_blank">
+            <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\html\sobrenos.html">
                 <p1 class="nav-txt"> Sobre nós</p1>
             </a>
             <a class="fa-nav-bar nav-bar" href="C:\TESTES\Testes\HeaderLinks\html\contato.html">
                 <p1 class="nav-txt"> Contato</p1>
             </a>
         </nav>
+    </div>
+
+    <div class="btb container-bottom">
+
     </div>  
 </body>
 </html>
