--- a/HeaderLinks/index.html
+++ b/HeaderLinks/index.html
@@ -24,8 +24,10 @@
         </div>
     </div>
     <div class="container-header">
-        <div class="logo-bubble"><p class="logo-name">Sistemas-WEB</p></div>
-        <a><img class="logo-img" src="C:\TESTES\Testes\fotos\logo.png"> </a>
+        <div class="logo">
+            <img class="logo-img" src="C:\TESTES\Testes\fotos\logo.png">
+            <div class="logo-bubble"><p1 class="logo-txt">Sistemas-WEB</p1></div>
+        </div>
 
     </div>
     <div>
